--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,14 @@
             <version>5.6.2</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>4.1.0</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 
